--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,27 +1,18 @@
----
-driver_plugin: vagrant
-driver_config:
+driver: vagrant
+
+provisioner:
+  name: chef_zero
   require_chef_omnibus: true
 
+settings:
+  parallel: true
+
 platforms:
-- name: ubuntu-12.04
-  driver_config:
-    box: opscode-ubuntu-12.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-12.04_provisionerless.box
-- name: ubuntu-10.04
-  driver_config:
-    box: opscode-ubuntu-10.04
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-10.04_provisionerless.box
-- name: centos-6.4
-  driver_config:
-    box: opscode-centos-6.4
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_centos-6.4_provisionerless.box
-- name: centos-5.9
-  driver_config:
-    box: opscode-centos-5.9
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_centos-5.9_provisionerless.box
+  - name: ubuntu-12.04
 
 suites:
-- name: default
-  run_list: []
-  attributes: {}
+  - name: default
+    run_list:
+      - recipe[apt]
+      - recipe[mongodb-mms-agent::default]
+      - recipe[mongodb-mms-agent::backup]
