--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,8 @@
-driver: vagrant
+driver:
+  name: vagrant
 
 provisioner:
-  name: chef_zero
+  name: chef_solo
   require_chef_omnibus: true
 
 settings:
